Revamping JRecordBind: java 11, design improvements, nicer with DI frameworks, less and clearer tests