@@ -1,58 +1,43 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>it.assist.jrecordbind</groupId>
+
+  <parent>
+    <groupId>org.fissore.jrecordbind</groupId>
+    <artifactId>jrecordbind-parent</artifactId>
+    <version>3.0.0</version>
+  </parent>
+
   <artifactId>jrecordbind-test</artifactId>
   <packaging>jar</packaging>
-  <version>2.3.9-SNAPSHOT</version>
-  <inceptionYear>2009</inceptionYear>
-  <name>JRecordBind test module</name>
-  <description>Transform fixed-length and variable-length text files into beans and back</description>
-  <url>http://jrecordbind.org</url>
-  <parent>
-    <groupId>it.assist.jrecordbind</groupId>
-    <artifactId>jrecordbind-parent</artifactId>
-    <version>2.3.9-SNAPSHOT</version>
-  </parent>
+  <name>JRecordBind integration tests</name>
+
   <dependencies>
-    <dependency>
-      <groupId>org.jboss.shrinkwrap</groupId>
-      <artifactId>shrinkwrap-api</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.shrinkwrap</groupId>
-      <artifactId>shrinkwrap-impl-base</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.shrinkwrap.resolver</groupId>
-      <artifactId>shrinkwrap-resolver-api-maven</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.shrinkwrap.resolver</groupId>
-      <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
-      <scope>test</scope>
-    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.8.2</version>
-      <scope>test</scope>
+      <version>${junit.version}</version>
     </dependency>
 
     <dependency>
-      <groupId>it.assist.jrecordbind</groupId>
+      <groupId>org.fissore.jrecordbind</groupId>
       <artifactId>jrecordbind</artifactId>
-      <version>2.3.9-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
   </dependencies>
+
   <build>
     <plugins>
       <plugin>
         <groupId>org.jvnet.jaxb2.maven2</groupId>
         <artifactId>maven-jaxb2-plugin</artifactId>
-        <version>0.8.1</version>
+        <version>${maven-jaxb2-plugin.version}</version>
+        <configuration>
+          <schemaDirectory>src/test/resources/record_definitions</schemaDirectory>
+          <schemaIncludes>
+            <include>**/*.xsd</include>
+          </schemaIncludes>
+          <bindingDirectory>src/test/xjb</bindingDirectory>
+        </configuration>
         <executions>
           <execution>
             <goals>
@@ -60,10 +45,19 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven-surefire-plugin.version}</version>
         <configuration>
-          <schemaDirectory>src/test/resources</schemaDirectory>
+          <argLine>
+            --add-exports org.fissore.jrecordbindtests/org.fissore.jrecordbindtests.test=org.fissore.jrecordbind
+          </argLine>
         </configuration>
       </plugin>
+
     </plugins>
   </build>
+
 </project>
